Add button to post-setting

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -180,8 +180,12 @@ font-size: 11px;
       color: #A5A7AA;
       float: right;
     }
-    .post-setting {
+    .post-setting-button {
       color: #000;
+      padding-top: 0;
+      background-color: #fff;
+      border: none;
+      border-radius: 0;
       float: right;
     }
     .post-setting-link {
