--- a/app/views/posts/_post_settings.html.erb
+++ b/app/views/posts/_post_settings.html.erb
@@ -1,11 +1,15 @@
 <% if p.user.id === current_user.id %>
-<i class="post-setting fa fa-ellipsis-h" aria-hidden="true" data-toggle="modal" data-target=".bd-example-modal-sm"></i>
-<div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-sm">
-    <div class="modal-content text-center">
-      <%= link_to 'Edit', edit_post_path(p), class: "post-setting-link" %>
-      <%= link_to 'Delete', post_path(p), method: :delete, data: { confirm: "Are you sure you want to delete this post?" }, class: "post-setting-link" %>
+
+  <button class="btn post-setting-button" data-toggle="modal" data-target=".bd-example-modal-lg">
+    <i class="fa fa-ellipsis-h" aria-hidden="true" data-toggle="modal" data-target=".bd-example-modal-sm"></i>
+  </button>
+
+  <div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-sm">
+      <div class="modal-content text-center">
+        <%= link_to 'Edit', edit_post_path(p), class: "post-setting-link" %>
+        <%= link_to 'Delete', post_path(p), method: :delete, data: { confirm: "Are you sure you want to delete this post?" }, class: "post-setting-link" %>
+      </div>
     </div>
   </div>
-</div>
 <% end %>
