Add border radius to post avatar

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -177,6 +177,7 @@ font-size: 11px;
       height: 30px;
       width: 30px;
       border: 1px solid #f1f1f1;
+      border-radius: 50%;
     }
     .user-name, .time-ago {
       display: inline;
