--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,15 +1,32 @@
-<h2>Forgot your password?</h2>
-
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= f.error_notification %>
-
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+<%= provide(:title, 'Password reset') %>
+<div class="registration-bg">
+  <div class="container">
+    <div class="row-one row justify-content-md-center align-items-center">
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="log-in card">
+          <div class="card-header">
+            <h1>instapost</h1>
+          </div>
+          <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+            <%= f.error_notification %>
+            <h2 class="card-sub-header">Forgot your password?</h2>
+            <div class="card-block">
+              <%= f.input :email, required: true, autofocus: true, label: false, placeholder: 'Email', input_html: { class: 'input-lg' } %>
+              <%= f.button :submit, "Reset password", class: 'btn-lg btn-info btn-block' %>
+              <% end %>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div id="already-acc" class="row justify-content-md-center align-items-center">
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="log-in card">
+            <div class="card-block">
+              <p>Already have an account? <%= link_to 'Log in', new_user_session_path %></p>
+              <p>Don't have an account? <%= link_to 'Sign up', new_user_registration_path %></p>
+            </div>
+          </div>
+        </div>
+      </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
