--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,3 @@
-<%= render 'posts/post_dashboard', posts: @posts %>
+<% if user_signed_in? %>
+  <%= render 'posts/post_dashboard', posts: @posts %>
+<% end %>
